--- a/index.html
+++ b/index.html
@@ -33,5 +33,48 @@
 </ul>
 <p>I am another paragraph. Some of the <span class="block">words</span> have been wrapped in a <span>span element</span>.</p>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Mi página web</title>
+	<style>
+		.container {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+		}
+		.box {
+			border: 1px solid black;
+			padding: 10px;
+			width: 200px;
+			height: 200px;
+			margin: 0 auto;
+		}
+	</style>
+</head>
+<body>
+	<div class="container">
+		<div class="box">Contenido de la caja</div>
+	</div>
+</body>
+</html>
+
+
 </body>
 </html>
