--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
 
 
 
+<div class="caja">
+	<span>Palabra1</span>
+	<span>Palabra2</span>
+	<span>Palabra3</span>
+	<span>Palabra4</span>
+	<span>Palabra5</span>
+  </div>
+  
+
+
+
+
+
 
 
 
