--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
 	<span>Palabra4</span>
 	<span>Palabra5</span>
   </div>
+
+  
+
+
+
+
+  <div class="caja1">
+	<span>Palabra1</span>
+	<span>Palabra2</span>
+	<span>Palabra3</span>
+	<span>Palabra4</span>
+	<span>Palabra5</span>
+  </div>
   
 
 
