--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
   </div>
   
 
-
+  <div class="contenedor">
+	<img src="ruta/de/la/imagen.jpg" alt="">
+	<div class="caja2">
+	  <p>Texto 1</p>
+	  <p>Texto 2</p>
+	  <p>Texto 3</p>
+	</div>
+  </div>
+  
 
 
 
