--- a/index.html
+++ b/index.html
@@ -1,38 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
-    <title>Jocs</title>
+    <title>Slider 3D</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+        
+        #slider-container {
+            width: 100%;
+            height: 100vh;
+            position: relative;
+        }
+        
+        #slider {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-    <nav>
-        <ul>
-          <li><a href="#">INICI</a></li>
-          <li>
-            <a href="#">TREBALLS</a>
-            <ul>
-              <li><a href="#">CREACIÓ WEB</a></li>
-              <li><a href="#">VIDEOJOCS</a></li>
-              <li><a href="#">ARTCODI</a></li>
-            </ul>
-            <li><a href="#">QUI SOM?</a></li>
-          </li>
-        </ul>
-      </nav>
+    <div id="slider-container">
+        <div id="slider"></div>
+    </div>
 
-      <h1>VIDEOJOCS</h1>
-      <h2>Com els hem fet?</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. amb el Programa <a href="https://processing.org" target="_blank">Processing</a> ,debitis eaque molestiae id perspiciatis eum labore vel, dicta provident sapiente explicabo voluptatum ducimus veniam iusto velit suscipit alias. <br> Architecto ea et iste suscipit. Nulla ab ducimus excepturi delectus ipsam sed ipsum temporibus quidem.</p>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+    <script>
+        var scene, camera, renderer;
+        var geometry, material, mesh;
+        var images = ['image1.jpg', 'image2.jpg', 'image3.jpg', 'image4.jpg'];
+        var currentIndex = 0;
 
-      <h2>De Processing a JavaScript</h2>
-      <p>Per poder passar els jocs a la web, vam haver de convertir el codi processing basant en Java a Javascript Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, veniam dicta aperiam perferendis ipsa vitae. </p>
+        function init() {
+            scene = new THREE.Scene();
 
-      <h2>CLICA PER JUGAR</h2> 
-      <a href="jocpenal.html" target="_blank"><img src="Portadamessi.png"></a>
-      <a href="jocmetoerit.html" target="_blank"><img src="meteorit.png"></a>
-      <a href="jocponggol.html" target="_blank"><img src="ponggol.png"></a>   
+            camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 10000);
+            camera.position.z = 1000;
+
+            geometry = new THREE.PlaneGeometry(500, 300);
+            material = new THREE.MeshBasicMaterial({ map: THREE.ImageUtils.loadTexture(images[currentIndex]) });
+
+            mesh = new THREE.Mesh(geometry, material);
+            scene.add(mesh);
+
+            renderer = new THREE.WebGLRenderer();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+
+            document.getElementById('slider').appendChild(renderer.domElement);
+        }
+
+        function animate() {
+            requestAnimationFrame(animate);
+
+            mesh.rotation.x += 0.01;
+            mesh.rotation.y += 0.02;
+
+            renderer.render(scene, camera);
+        }
+
+        function changeImage() {
+            currentIndex = (currentIndex + 1) % images.length;
+            material.map = THREE.ImageUtils.loadTexture(images[currentIndex]);
+        }
+
+        init();
+        animate();
+        setInterval(changeImage, 3000);
+    </script>
 </body>
 </html>
