--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script>
         var scene, camera, renderer;
         var geometry, material, mesh;
-        var images = ['image1.jpg', 'image2.jpg', 'image3.jpg', 'image4.jpg'];
+        var images = ['baki.peg', 'jack.peg', 'yujiro.jpg', 'yuuhichiro.jpeg'];
         var currentIndex = 0;
 
         function init() {
