--- a/index.html
+++ b/index.html
@@ -1,72 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Slider 3D</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-        
-        #slider-container {
-            width: 100%;
-            height: 100vh;
-            position: relative;
-        }
-        
-        #slider {
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
+<style>
+
+</style>
+
 <body>
-    <div id="slider-container">
-        <div id="slider"></div>
-    </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-    <script>
-        var scene, camera, renderer;
-        var geometry, material, mesh;
-        var images = ['baki.peg', 'jack.peg', 'yujiro.jpg', 'yuuhichiro.jpeg'];
-        var currentIndex = 0;
+  
 
-        function init() {
-            scene = new THREE.Scene();
 
-            camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 10000);
-            camera.position.z = 1000;
 
-            geometry = new THREE.PlaneGeometry(500, 300);
-            material = new THREE.MeshBasicMaterial({ map: THREE.ImageUtils.loadTexture(images[currentIndex]) });
-
-            mesh = new THREE.Mesh(geometry, material);
-            scene.add(mesh);
-
-            renderer = new THREE.WebGLRenderer();
-            renderer.setSize(window.innerWidth, window.innerHeight);
-
-            document.getElementById('slider').appendChild(renderer.domElement);
-        }
-
-        function animate() {
-            requestAnimationFrame(animate);
-
-            mesh.rotation.x += 0.01;
-            mesh.rotation.y += 0.02;
-
-            renderer.render(scene, camera);
-        }
-
-        function changeImage() {
-            currentIndex = (currentIndex + 1) % images.length;
-            material.map = THREE.ImageUtils.loadTexture(images[currentIndex]);
-        }
-
-        init();
-        animate();
-        setInterval(changeImage, 3000);
-    </script>
 </body>
 </html>
