--- a/index.html
+++ b/index.html
@@ -13,6 +13,29 @@
 
 <body>
 
+  <div class="container">
+    <input type="radio" name="slider" id="item-1">
+    <input type="radio" name="slider" id="item-2">
+    <input type="radio" name="slider" id="item-3">
+    <input type="radio" name="slider" id="item-4">
+
+    <div class="cards">
+      <label class="card" for="item-1" id="selector-1">
+        <img src="baki.jpeg">
+      </label>
+      <label class="card" for="item-2" id="selector-2"> 
+        <img src="jack.jpeg">
+      </label>
+      <label class="card" for="item-3" id="selector-3"> 
+        <img src="yujiro.jpg">
+      </label>
+      <label class="card" for="item-4" id="selector-4"> 
+        <img src="yuuhichiro.jpeg">
+      </label>
+    </div>
+
+  </div>
+
   
 
 
