--- a/index.html
+++ b/index.html
@@ -8,7 +8,32 @@
 </head>
 
 <style>
+.container_slider
+{
+  max-width: 1000px;
+  height: 500px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 10px;
+}
 
+.card 
+{
+  position:absolute;
+  width: 60%;
+  height: 100%;
+}
+
+.img
+{
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
 </style>
 
 <body>
