--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
   padding: 30px 10px;
 }
 
+.container 
+{
+  max-width: 100%;
+}
+
+.cards
+{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .card 
 {
   position:absolute;
