--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
 
 .container 
 {
+  width: 100%;
   max-width: 800px;
+  height: 100%;
   max-height: 600px;
   transform-style: preserve-3d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .cards
