--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ input[type=radio]
   right: 0;
   margin: 0;
   cursor: pointer;
+  transition: transform 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .img
