--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ input[type=radio]
 {
   transform: translateX(-40%) scale(0.8);
   z-index: 0;
+  opacity: 0.6;
 }
 
 #item-3:checked ~ .cards #selector-1,
@@ -78,6 +79,7 @@ input[type=radio]
 {
   transform: translateX(40%) scale(0.8);
   z-index: 0;
+  opacity: 0.6;
 }
 
 #item-1:checked ~ .cards #selector-1,
